--- a/articles/app-service/containers/toc.yml
+++ b/articles/app-service/containers/toc.yml
@@ -4,7 +4,7 @@ items:
 - name: Översikt
   items:
   - name: Om Web Apps
-    href: ../app-service-web-overview.md
+    href: ../overview.md
   - name: Om App Service på Linux
     href: app-service-linux-intro.md
   - name: Jämför värdalternativ
@@ -61,9 +61,9 @@ items:
 - name: Exempel
   items:
   - name: Azure CLI
-    href: ../app-service-cli-samples.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+    href: ../samples-cli.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
   - name: Azure PowerShell
-    href: ../app-service-powershell-samples.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+    href: ../samples-powershell.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
 - name: Begrepp
   items:
   - name: Så här fungerar App Service
@@ -222,9 +222,9 @@ items:
         href: ../faq-open-source-technologies.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
       - name: Vanliga frågor och svar om konfiguration och hantering
         href: ../faq-configuration-and-management.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
-ms.openlocfilehash: ee82b19423698c437d74f79bfce72682d3c78909
-ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
+ms.openlocfilehash: 3e0ce6b9c8f3fa3aaf88ba8994bf7eb58911da85
+ms.sourcegitcommit: 4eeeb520acf8b2419bcc73d8fcc81a075b81663a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/17/2018
-ms.locfileid: "53539297"
+ms.lasthandoff: 12/19/2018
+ms.locfileid: "53604505"
