--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -39,11 +39,11 @@ items:
   - name: Visualisera data i Log Analytics
     href: learn/tutorial-logs-dashboards.md
   - name: Arkivera plattformsmått och loggdata
-    href: ../monitoring-and-diagnostics/monitor-tutorial-archive-monitoring-data.md?toc=/azure/azure-monitor/toc.json
+    href: learn/tutorial-archive-data.md
   - name: Avisera om loggdata
     href: learn/tutorial-response.md
   - name: Skala automatiskt enligt prestanda och schema
-    href: ../monitoring-and-diagnostics/monitor-tutorial-autoscale-performance-schedule.md?toc=/azure/azure-monitor/toc.json
+    href: learn/tutorial-autoscale-performance-schedule.md
   - name: Hitta körningsundantag för program
     href: ../application-insights/app-insights-tutorial-runtime-exceptions.md?toc=/azure/azure-monitor/toc.json
   - name: Hitta prestandaproblem för program
@@ -367,8 +367,6 @@ items:
           href: ../application-insights/app-insights-sharepoint.md?toc=/azure/azure-monitor/toc.json
         - name: Dynamics CRM
           href: ../application-insights/app-insights-sample-mscrm.md?toc=/azure/azure-monitor/toc.json
-        - name: Fler plattformar
-          href: ../application-insights/app-insights-platforms.md?toc=/azure/azure-monitor/toc.json
       - name: Smart identifiering
         href: ../application-insights/app-insights-proactive-diagnostics.md?toc=/azure/azure-monitor/toc.json
         items:
@@ -426,10 +424,8 @@ items:
         href: platform/data-collector-api.md
       - name: Pipelineexempel för API för Log Analytics-datainsamlare
         href: platform/create-pipeline-datacollector-api.md
-      - name: Programdata
-        href: ../application-insights/app-insights-analytics-import.md?toc=/azure/azure-monitor/toc.json
       - name: REST-API för måttlager
-        href: ../monitoring-and-diagnostics/metrics-store-custom-rest-api.md?toc=/azure/azure-monitor/toc.json
+        href: platform/metrics-store-custom-rest-api.md
       - name: Gäst-OS till måttlager – virtuell Linux-dator (Telegraf)
         href: platform/collect-custom-metrics-linux-telegraf.md
     - name: System Center
@@ -447,9 +443,9 @@ items:
       - name: Lagra diagnostikloggar
         href: platform/diagnostic-logs-stream-log-store.md
       - name: Strömma aktivitetsloggen till Event Hubs
-        href: ../monitoring-and-diagnostics/monitoring-stream-activity-logs-event-hubs.md?toc=/azure/azure-monitor/toc.json
+        href: platform/activity-logs-stream-event-hubs.md
       - name: Loggar och mått till Event Hub
-        href: ../monitoring-and-diagnostics/monitor-stream-monitoring-data-event-hubs.md?toc=/azure/azure-monitor/toc.json
+        href: platform/stream-monitoring-data-event-hubs.md
       - name: Diagnostikloggar till Event Hub
         href: platform/diagnostic-logs-stream-event-hubs.md
       - name: Programdata till Log Analytics
@@ -538,7 +534,7 @@ items:
       - name: Övervaka Docker-program
         href: ../application-insights/app-insights-docker.md?toc=/azure/azure-monitor/toc.json
     - name: Övervaka resursgrupper
-      href: ../monitoring-and-diagnostics/resource-group-insights.md?toc=/azure/azure-monitor/toc.json
+      href: insights/resource-group-insights.md
     - name: Övervaka databaser
       items:
       - name: Azure SQL
@@ -659,7 +655,7 @@ items:
     - name: Visa händelser i aktivitetsloggen
       href: ../azure-resource-manager/resource-group-audit.md?toc=/azure/azure-monitor/toc.json
     - name: Visa tjänstmeddelanden
-      href: ../monitoring-and-diagnostics/monitoring-service-notifications.md?toc=/azure/azure-monitor/toc.json
+      href: platform/service-notifications.md
     - name: Frågeloggdata
       items:
       - name: Dokumentation om frågespråk
@@ -754,7 +750,7 @@ items:
         - name: Webhook-åtgärder för loggaviseringar
           href: platform/alerts-log-webhook.md
         - name: Felsöka loggaviseringar
-          href: ../monitoring-and-diagnostics/alert-log-troubleshoot.md?toc=/azure/azure-monitor/toc.json
+          href: platform/alert-log-troubleshoot.md
       - name: Använda aktivitetsloggaviseringar
         items:
         - name: Konfigurera aviseringar i en händelse i aktivitetsloggen
@@ -800,7 +796,7 @@ items:
       - name: Genomgång av automatisk skalning
         href: platform/autoscale-get-started.md
       - name: Förstå inställningarna för automatisk skalning
-        href: ../monitoring-and-diagnostics/monitoring-understanding-autoscale-settings.md?toc=/azure/azure-monitor/toc.json
+        href: platform/autoscale-understanding-settings.md
       - name: Bästa praxis
         href: platform/autoscale-best-practices.md
       - name: Vanliga mått
@@ -818,7 +814,7 @@ items:
     - name: Tjänstmeddelanden
       items:
       - name: Visa tjänstmeddelanden
-        href: ../monitoring-and-diagnostics/monitoring-service-notifications.md?toc=/azure/azure-monitor/toc.json
+        href: platform/service-notifications.md
       - name: Konfigurera aviseringar för tjänstmeddelanden
         href: platform/alerts-activity-log-service-notifications.md
     - name: IT Service Management
@@ -846,7 +842,7 @@ items:
     - name: PowerShell
       items:
       - name: Azure PowerShell-exempel
-        href: ../monitoring-and-diagnostics/insights-powershell-samples.md?toc=/azure/azure-monitor/toc.json
+        href: platform/powershell-quickstart-samples.md
       - name: PowerShell-cmdletar
         href: platform/powershell-workspace-configuration.md
       - name: Program
@@ -915,6 +911,8 @@ items:
       href: ../application-insights/application-insights-correlation.md?toc=/azure/azure-monitor/toc.json
     - name: NuGet-paket
       href: ../application-insights/app-insights-nuget.md?toc=/azure/azure-monitor/toc.json
+    - name: Plattformssupport
+      href: ../application-insights/app-insights-platforms.md?toc=/azure/azure-monitor/toc.json
   - name: Application Insights-datamodell
     items:
     - name: Översikt
@@ -954,7 +952,7 @@ items:
     - name: Mått som stöds
       href: platform/metrics-supported.md
     - name: Mått som stöds för nyare aviseringar
-      href: ../monitoring-and-diagnostics/monitoring-near-real-time-metric-alerts.md?toc=/azure/azure-monitor/toc.json
+      href: platform/alerts-metric-near-real-time.md
   - name: Scheman
     items:
     - name: Tjänster, kategorier och scheman för diagnostikloggar
@@ -975,7 +973,7 @@ items:
     - name: Klassiskt API för autoskalning och mått
       href: ./platform/classic-api-retirement-metrics-autoscale.md
     - name: Klassisk avisering och övervakning
-      href: ../monitoring-and-diagnostics/monitoring-classic-retirement.md?toc=/azure/azure-monitor/toc.json
+      href: platform/monitoring-classic-retirement.md
     - name: Utöka aviseringar från Log Analytics till Azure
       href: platform/alerts-extend.md
     - name: Kopiera aviseringar från OMS-portalen till Azure Portal
@@ -1010,9 +1008,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: 31569287fa00f123d3462d6d3dc5bf35a3650d19
-ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
+ms.openlocfilehash: 0187e9a74da758a5756ce3841953141093aa203c
+ms.sourcegitcommit: 4eeeb520acf8b2419bcc73d8fcc81a075b81663a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/17/2018
-ms.locfileid: "53549455"
+ms.lasthandoff: 12/19/2018
+ms.locfileid: "53601023"
