--- a/articles/app-service/index.yml
+++ b/articles/app-service/index.yml
@@ -1,16 +1,16 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 6b7e0bf650d46f7e445aacc4bb61efca94510716
-ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
+ms.openlocfilehash: 1a16dd52d06e4ee31e6645d6e5a4090afd897de9
+ms.sourcegitcommit: 4eeeb520acf8b2419bcc73d8fcc81a075b81663a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/17/2018
-ms.locfileid: "53538675"
+ms.lasthandoff: 12/19/2018
+ms.locfileid: "53605406"
 documentType: LandingData
-title: Dokumentation om Web Apps
+title: Dokumentation om App Service
 metadata:
   document_id: 6c8db72a-cdb7-8fb7-ed57-ed75afcca4d0
-  title: Dokumentation om Azure Web Apps – självstudier, API-referens
-  meta.description: Learn how to use App Service Web Apps to build and host websites and web applications.
+  title: Dokumentation om Azure App Service – självstudier, API-referens
+  meta.description: Learn how to use App Service to build and host websites and web applications.
   services: app-service
   author: czeumault
   manager: carolz
@@ -21,7 +21,7 @@ metadata:
   ms.date: 01/23/2017
   ms.author: carolz
 abstract:
-  description: Med Azure Web Apps kan du skapa och vara värd för webbappar i valfritt programmeringsspråk utan att behöva hantera infrastrukturen. Azure Web Apps tillhandahåller automatisk skalning och hög tillgänglighet, har stöd för både Windows och Linux och möjliggör automatiska distributioner från GitHub, Azure DevOps eller valfri Git-lagringsplats. Lär dig hur du använder Azure Web Apps med våra snabbstarter, självstudier och exempel.
+  description: Med Azure App Service kan du skapa och vara värd för webbappar i valfritt programmeringsspråk utan att behöva hantera infrastrukturen. Azure Web Apps tillhandahåller automatisk skalning och hög tillgänglighet, har stöd för både Windows och Linux och möjliggör automatiska distributioner från GitHub, Azure DevOps eller valfri Git-lagringsplats. Lär dig hur du använder Azure Web Apps med våra snabbstarter, självstudier och exempel.
   aside:
     image:
       alt: 
@@ -35,7 +35,7 @@ sections:
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: 'Lär dig hur du distribuerar ditt första program till molnet med Web Apps:'
+    text: 'Lär dig hur du distribuerar ditt första program i molnet med hjälp av App Service:'
   - type: list
     style: icon48
     items:
