--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -94,7 +94,7 @@ items:
       href: /azure/architecture/building-blocks/extending-templates/update-resource
   - name: Distribuera mallar
     items:
-    - name: Distribuera med hjälp av portalen
+    - name: Distribuera med hjälp av Azure-portalen
       href: resource-group-template-deploy-portal.md
     - name: Distribuera med hjälp av Azure CLI
       href: resource-group-template-deploy-cli.md
@@ -123,27 +123,27 @@ items:
       maintainContext: true
   - name: Hantera mallar
     items:
-    - name: Azure PowerShell
-      href: powershell-azure-resource-manager.md
-    - name: Azure CLI
-      href: cli-azure-resource-manager.md
-    - name: Azure Portal
+    - name: Hantera med hjälp av Azure-portalen
       href: resource-group-portal.md
-    - name: Använd taggar för att organisera resurser
-      href: resource-group-using-tags.md
-    - name: Flytta resurser till ny grupp eller prenumeration
+    - name: Hantera med hjälp av Azure PowerShell
+      href: powershell-azure-resource-manager.md
+    - name: Hantera med hjälp av Azure CLI
+      href: cli-azure-resource-manager.md
+    - name: Flytta resurser
       href: resource-group-move-resources.md
       items:
       - name: Flytta support per resurstyp
         href: move-support-resources.md
+    - name: Organisera resurser med hjälp av taggar
+      href: resource-group-using-tags.md
+    - name: Lås resurser
+      href: resource-group-lock-resources.md
+    - name: Autentiserings-API för att få åtkomst till prenumerationer
+      href: resource-manager-api-authentication.md
     - name: Skapa EA-prenumerationer
       href: programmatically-create-subscription.md
     - name: Bevilja åtkomst för att skapa EA-prenumerationer
       href: grant-access-to-create-subscription.md
-    - name: Autentiserings-API för att få åtkomst till prenumerationer
-      href: resource-manager-api-authentication.md
-    - name: Lås resurser
-      href: resource-group-lock-resources.md
   - name: Granska distributioner
     items:
     - name: Visa aktivitetsloggar
@@ -211,7 +211,7 @@ items:
     href: /rest/api/resources/
   - name: REST – Distributionshanteraren
     href: /rest/api/deploymentmanager/
-  - name: PowerShell
+  - name: Azure PowerShell
     href: /powershell/module/azurerm.resources
   - name: Azure CLI
     href: /cli/azure/resource
@@ -235,9 +235,9 @@ items:
     href: resource-manager-personal-data.md
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=azure-resource-manager
-ms.openlocfilehash: 166a23d480db7dfda7a78a5a63e7717b5e721bb9
-ms.sourcegitcommit: c2e61b62f218830dd9076d9abc1bbcb42180b3a8
+ms.openlocfilehash: 47766ce1bd0250c1eeaa269c4bc2436a2e117f02
+ms.sourcegitcommit: 4eeeb520acf8b2419bcc73d8fcc81a075b81663a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/15/2018
-ms.locfileid: "53436797"
+ms.lasthandoff: 12/19/2018
+ms.locfileid: "53600972"
