--- a/articles/batch/TOC.yml
+++ b/articles/batch/TOC.yml
@@ -78,7 +78,7 @@ items:
       href: batch-virtual-network.md
     - name: Montera en Azure-filresurs
       href: pool-file-shares.md
-    - name: Använda beräkningsintensiva virtuella datorer
+    - name: Använda RDMA- eller GPU-instanser
       href: batch-pool-compute-intensive-sizes.md
     - name: Använda Linux-beräkningsnoder
       href: batch-linux-nodes.md
@@ -218,9 +218,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-batch
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=batch
-ms.openlocfilehash: 4cf95728868db40f148d2750360f7055606d568d
-ms.sourcegitcommit: 7c4fd6fe267f79e760dc9aa8b432caa03d34615d
+ms.openlocfilehash: 507e9873cfa3a477dada8825b518e9af2df5882e
+ms.sourcegitcommit: 7cd706612a2712e4dd11e8ca8d172e81d561e1db
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "47433318"
+ms.lasthandoff: 12/18/2018
+ms.locfileid: "53582328"
