--- a/articles/data-explorer/toc.yml
+++ b/articles/data-explorer/toc.yml
@@ -49,23 +49,30 @@ items:
   expanded: true
 - name: Instruktionsguider
   items:
-  - name: Ansluta från Databricks med hjälp av Python
-    href: connect-from-databricks.md
-  - name: Skriva frågor
-    href: write-queries.md
-  - name: Mata in exempeldata
-    href: ingest-sample-data.md
-  - name: Visualisera data i Grafana
-    href: grafana.md
-  - name: Ta bort data
-    href: delete-data.md
-  - name: Hantera databasbehörigheter
-    href: manage-database-permissions.md
-  - name: Kontrollera klusterhälsa
-    href: check-cluster-health.md
-  - name: Hantera klusterskalning
-    href: manage-cluster-scaling.md
-  - name: Felsökning
+  - name: Kom igång
+    items:
+    - name: Skriva frågor
+      href: write-queries.md
+    - name: Mata in exempeldata
+      href: ingest-sample-data.md
+    expanded: true
+  - name: Hantera
+    items:
+    - name: Hantera databasbehörigheter
+      href: manage-database-permissions.md
+    - name: Kontrollera klusterhälsa
+      href: check-cluster-health.md
+    - name: Hantera klusterskalning
+      href: manage-cluster-scaling.md
+    - name: Ta bort data
+      href: delete-data.md
+  - name: Arbeta med andra verktyg
+    items:
+    - name: Ansluta från Databricks med hjälp av Python
+      href: connect-from-databricks.md
+    - name: Visualisera data i Grafana
+      href: grafana.md
+  - name: Felsöka
     items:
     - name: Skapa ett kluster
       href: troubleshoot-create-cluster.md
@@ -105,9 +112,9 @@ items:
     href: http://aka.ms/adecostestimator
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=data-explorer
-ms.openlocfilehash: 31b588167d4a136f54df248225fd718128a7421c
-ms.sourcegitcommit: 5d837a7557363424e0183d5f04dcb23a8ff966bb
+ms.openlocfilehash: 5773939edb8bb846325e5709cc46273b9669117b
+ms.sourcegitcommit: 4eeeb520acf8b2419bcc73d8fcc81a075b81663a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/06/2018
-ms.locfileid: "52958226"
+ms.lasthandoff: 12/19/2018
+ms.locfileid: "53606835"
