--- a/articles/hdinsight/r-server/TOC.yml
+++ b/articles/hdinsight/r-server/TOC.yml
@@ -41,7 +41,7 @@ items:
     - name: Använda Azure Storage
       href: ../hdinsight-hadoop-use-blob-storage.md
       maintainContext: true
-    - name: Använda Azure Data Lake Store
+    - name: Använda Azure Data Lake Storage
       href: ../hdinsight-hadoop-use-data-lake-store.md
       maintainContext: true
   - name: Använda HDInsight-verktyg
@@ -190,7 +190,7 @@ items:
     - name: Ladda upp data för Apache Hadoop-jobb
       href: ../hdinsight-upload-data.md
       maintainContext: true
-    - name: Flera HDInsight-kluster med Data Lake Store
+    - name: Flera HDInsight-kluster med Data Lake Storage
       href: ../hdinsight-multiple-clusters-data-lake-store.md
       maintainContext: true
     - name: Importera och exportera data med Apache Sqoop
@@ -337,9 +337,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: fdf844f959d7832214795155c3af5c0cf3ec6a25
-ms.sourcegitcommit: 345b96d564256bcd3115910e93220c4e4cf827b3
+ms.openlocfilehash: f9bf9d14d0a4124dd19dd76777226c0976ffc84d
+ms.sourcegitcommit: 4eeeb520acf8b2419bcc73d8fcc81a075b81663a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/28/2018
-ms.locfileid: "52495819"
+ms.lasthandoff: 12/19/2018
+ms.locfileid: "53601363"
