--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -12,20 +12,14 @@ items:
   expanded: true
 - name: Självstudier
   items:
-  - name: Ladda upp, koda och strömma
-    items:
-    - name: Med .NET
-      href: stream-files-tutorial-with-api.md
-    - name: Med REST
-      href: stream-files-tutorial-with-rest.md
-  - name: Strömma live
-    items:
-    - name: Med .NET Core
-      href: stream-live-tutorial-with-api.md
-  - name: Analysera din video
-    items:
-    - name: Med .NET
-      href: analyze-videos-tutorial-with-api.md
+  - name: Koda fjärrfiler och strömma video – REST
+    href: stream-files-tutorial-with-rest.md
+  - name: Koda uppladdade filer och strömma video – NET
+    href: stream-files-tutorial-with-api.md
+  - name: Strömma live – .NET
+    href: stream-live-tutorial-with-api.md
+  - name: Analysera din video – .NET
+    href: analyze-videos-tutorial-with-api.md
 - name: Exempel
   items:
   - name: Azure-kodexempel
@@ -186,9 +180,9 @@ items:
     href: limits-quotas-constraints.md
   - name: VANLIGA FRÅGOR OCH SVAR
     href: frequently-asked-questions.md
-ms.openlocfilehash: 9c42d463bc88ae936e0fbe965fd4039a716e3052
-ms.sourcegitcommit: b767a6a118bca386ac6de93ea38f1cc457bb3e4e
+ms.openlocfilehash: 49c15b2540b33a3f37f4f276b435ce3f4508b513
+ms.sourcegitcommit: 7cd706612a2712e4dd11e8ca8d172e81d561e1db
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 12/18/2018
-ms.locfileid: "53557180"
+ms.locfileid: "53582515"
