--- a/articles/hdinsight/hadoop/TOC.yml
+++ b/articles/hdinsight/hadoop/TOC.yml
@@ -48,7 +48,7 @@ items:
     - name: Använda Azure Storage
       href: ../hdinsight-hadoop-use-blob-storage.md
       maintainContext: true
-    - name: Använda Azure Data Lake Store
+    - name: Använda Azure Data Lake Storage
       href: ../hdinsight-hadoop-use-data-lake-store.md
       maintainContext: true
   - name: Använda Apache Hadoop för batchfrågor
@@ -63,7 +63,7 @@ items:
         href: apache-hadoop-use-hive-visual-studio.md
       - name: Använda Apache Hive-vyn
         href: apache-hadoop-use-hive-ambari-view.md
-      - name: Använd Beeline
+      - name: Använda Apache Hive Beeline
         href: apache-hadoop-use-hive-beeline.md
       - name: Använda REST-API
         href: apache-hadoop-use-hive-curl.md
@@ -105,7 +105,7 @@ items:
         href: apache-hadoop-use-pig-curl.md
       - name: Använd Fjärrskrivbord
         href: apache-hadoop-use-pig-remote-desktop.md
-    - name: Använda DataFu med Apache Pig
+    - name: Använda Apache DataFu med Apache Pig
       href: apache-hadoop-use-pig-datafu-udf.md
     - name: Skicka Apache Hadoop-jobb
       href: submit-apache-hadoop-jobs-programmatically.md
@@ -201,7 +201,7 @@ items:
     - name: Installera eller uppdatera Mono
       href: ../hdinsight-hadoop-install-mono.md
       maintainContext: true
-    - name: Lägga till Hive-bibliotek
+    - name: Lägga till Apache Hive-bibliotek
       href: ../hdinsight-hadoop-add-hive-libraries.md
       maintainContext: true
     - name: Använda Apache Giraph
@@ -337,7 +337,7 @@ items:
     - name: Ladda upp data för Apache Hadoop-jobb
       href: ../hdinsight-upload-data.md
       maintainContext: true
-    - name: Flera HDInsight-kluster med Data Lake Store
+    - name: Flera HDInsight-kluster med Data Lake Storage
       href: ../hdinsight-multiple-clusters-data-lake-store.md
       maintainContext: true
     - name: Importera och exportera data med Apache Sqoop
@@ -559,9 +559,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 43ebb63bdda8c484ce1c2d2828293032ea90013c
-ms.sourcegitcommit: e37fa6e4eb6dbf8d60178c877d135a63ac449076
+ms.openlocfilehash: f1d3fbab35ddedf3a1dc9360ecc4dbe38591e58c
+ms.sourcegitcommit: e68df5b9c04b11c8f24d616f4e687fe4e773253c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/13/2018
-ms.locfileid: "53321160"
+ms.lasthandoff: 12/20/2018
+ms.locfileid: "53653704"
