--- a/articles/hdinsight/spark/TOC.yml
+++ b/articles/hdinsight/spark/TOC.yml
@@ -42,7 +42,7 @@ items:
     - name: Använda Azure Storage
       href: ../hdinsight-hadoop-use-blob-storage.md
       maintainContext: true
-    - name: Använda Azure Data Lake Store
+    - name: Använda Azure Data Lake Storage
       href: ../hdinsight-hadoop-use-data-lake-store.md
       maintainContext: true
   - name: Utveckla
@@ -93,14 +93,14 @@ items:
       href: apache-spark-zeppelin-notebook.md
   - name: Använda med andra Azure-tjänster
     items:
-    - name: Använda med Data Lake Store
+    - name: Använda med Data Lake Storage
       href: apache-spark-use-with-data-lake-store.md
     - name: Ansluta till Azure SQL-databas
       href: apache-spark-connect-to-sql-database.md
     - name: Implementera en lambda-arkitektur med Apache Spark och Cosmos DB
       href: ../../cosmos-db/lambda-architecture.md
       maintainContext: true
-  - name: Spark-strömning
+  - name: Apache Spark-direktuppspelning
     items:
     - name: Översikt över direktuppspelning
       href: apache-spark-streaming-overview.md
@@ -281,7 +281,7 @@ items:
     - name: Ladda upp data för Apache Hadoop-jobb
       href: ../hdinsight-upload-data.md
       maintainContext: true
-    - name: Flera HDInsight-kluster med Data Lake Store
+    - name: Flera HDInsight-kluster med Data Lake Storage
       href: ../hdinsight-multiple-clusters-data-lake-store.md
       maintainContext: true
     - name: Importera och exportera data med Apache Sqoop
@@ -300,7 +300,7 @@ items:
         href: ../hadoop/apache-hadoop-use-sqoop-powershell.md
         maintainContext: true
       maintainContext: true
-    - name: Använd Oozie för arbetsflöden
+    - name: Använda Apache Oozie för arbetsflöden
       href: ../hdinsight-use-oozie-linux-mac.md
       maintainContext: true
     - name: Använda tidsbaserade Apache Oozie-koordinatorer
@@ -456,9 +456,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 35ef5face0f64b6766993eeb7f546923726bd166
-ms.sourcegitcommit: 56d20d444e814800407a955d318a58917e87fe94
+ms.openlocfilehash: 550e028ec66d9f82fd8b1102c6f56b62b9aad8b9
+ms.sourcegitcommit: c94cf3840db42f099b4dc858cd0c77c4e3e4c436
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/29/2018
-ms.locfileid: "52584340"
+ms.lasthandoff: 12/19/2018
+ms.locfileid: "53630724"
