--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -28,6 +28,8 @@ items:
     href: cli-samples.md
 - name: Begrepp
   items:
+  - name: Migrera från v2 till v3
+    href: migrate-from-v2-to-v3.md
   - name: Analysera innehåll
     href: analyzing-video-audio-files-concept.md
   - name: Koda innehåll
@@ -78,8 +80,6 @@ items:
       href: live-event-latency.md
 - name: Instruktionsguider
   items:
-  - name: Migrera från v2 till v3
-    href: migrate-from-v2-to-v3.md
   - name: Skapa ett konto – CLI
     href: create-account-cli-how-to.md
   - name: Åtkomst till API:er – CLI
@@ -90,6 +90,8 @@ items:
       href: job-input-from-http-how-to.md
     - name: Från en lokal fil – .NET
       href: job-input-from-local-file-how-to.md
+    - name: Från en lokal fil – REST
+      href: upload-files-rest-how-to.md
   - name: Skapa filter
     items:
     - name: Med .NET
@@ -180,9 +182,9 @@ items:
     href: limits-quotas-constraints.md
   - name: VANLIGA FRÅGOR OCH SVAR
     href: frequently-asked-questions.md
-ms.openlocfilehash: 49c15b2540b33a3f37f4f276b435ce3f4508b513
-ms.sourcegitcommit: 7cd706612a2712e4dd11e8ca8d172e81d561e1db
+ms.openlocfilehash: aafc49b10a012bab6c3dc3d455480deca44fde32
+ms.sourcegitcommit: c94cf3840db42f099b4dc858cd0c77c4e3e4c436
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/18/2018
-ms.locfileid: "53582515"
+ms.lasthandoff: 12/19/2018
+ms.locfileid: "53631999"
