commit translated contents

--- a/articles/hdinsight/index.yml
+++ b/articles/hdinsight/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: bf2b326b6e0003b9a690e560d5a312f16659dad9
-ms.sourcegitcommit: c37122644eab1cc739d735077cf971edb6d428fe
+ms.openlocfilehash: 52f96a97aaf4ced4cf7b0e1170014f327ff6e192
+ms.sourcegitcommit: 803e66de6de4a094c6ae9cde7b76f5f4b622a7bb
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/14/2018
-ms.locfileid: "53406751"
+ms.lasthandoff: 01/02/2019
+ms.locfileid: "53975807"
 documentType: LandingData
 title: Dokumentation om Azure HDInsight
 metadata:
@@ -75,7 +75,7 @@ sections:
     - html: Apache Kafka &#58; <a href="/azure/hdinsight/hdinsight-apache-kafka-spark-structured-streaming">Strukturerad strömning med Kafka</a> | <a href="/azure/hdinsight/hdinsight-apache-storm-with-kafka">Använda med Storm i HDInsight</a> | <a href="/azure/hdinsight/kafka/apache-kafka-producer-consumer-api">Använda API:er för producent och konsument i Kafka</a>
     - html: Apache HBase &#58; <a href="/azure/hdinsight/hbase/apache-hbase-provision-vnet">Skapa HBase-kluster i ett virtuellt nätverk</a> | <a href="/azure/hdinsight/hdinsight-phoenix-in-hdinsight">Använda Apache Phoenix</a> | <a href="/azure/hdinsight/hdinsight-using-spark-query-hbase">Ansluta till Spark</a>
     - html: Interactive Query &#58; <a href="/azure/hdinsight/interactive-query/apache-hadoop-connect-hive-power-bi-directquery">Ansluta med Power BI med Direct Query</a>
-    - html: Apache Storm &#58; <a href="/azure/hdinsight/storm/apache-storm-develop-java-topology">Skapa Storm-topologi i Java</a> | <a href="/azure/hdinsight/storm/apache-storm-deploy-monitor-topology-linux">Distribuera Storm-topologier i HDInsight</a> | <a href="/azure/hdinsight/storm/apache-storm-write-data-lake-store">Skriva från Storm till Data Lake Store</a>
+    - html: Apache Storm &#58; <a href="/azure/hdinsight/storm/apache-storm-develop-java-topology">Skapa Storm-topologi i Java</a> | <a href="/azure/hdinsight/storm/apache-storm-deploy-monitor-topology-linux">Distribuera Storm-topologier i HDInsight</a> | <a href="/azure/hdinsight/storm/apache-storm-write-data-lake-store">Skriva från Storm till Data Lake Storage</a>
     - html: 'ML Services: <a href="/azure/hdinsight/r-server/r-server-submit-jobs-r-tools-vs">Använda R-verktyg för Visual Studio</a>'
 - title: Referens
   items:
