--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -89,6 +89,8 @@ items:
     items:
     - name: Samla in loggar med Application Insights
       href: active-directory-b2c-troubleshoot-custom.md
+    - name: Konfigurera ROPC
+      href: ropc-custom.md
     - name: Konfigurera användarinmatning
       href: active-directory-b2c-configure-signup-self-asserted-custom.md
     - name: Skapa en anpassad princip
@@ -276,16 +278,6 @@ items:
     href: b2clogin.md
   - name: Använd Azure AD Graph API:n
     href: active-directory-b2c-devquickstarts-graph-dotnet.md
-  - name: Webbappar
-    items:
-    - name: ASP.NET
-      href: active-directory-b2c-devquickstarts-web-dotnet-susi.md
-  - name: Webb-API:er
-    items:
-    - name: ASP.NET
-      href: active-directory-b2c-devquickstarts-api-dotnet.md
-    - name: Anropa ett .NET-webb-API
-      href: active-directory-b2c-devquickstarts-web-api-dotnet.md
   - name: Referens
     items:
     - name: Kodexempel
@@ -324,9 +316,9 @@ items:
     href: active-directory-b2c-support.md
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory-b2c
-ms.openlocfilehash: d61d6726d388fd7bf18f1bcbc168078afadd1a71
-ms.sourcegitcommit: 7cd706612a2712e4dd11e8ca8d172e81d561e1db
+ms.openlocfilehash: b8a8db0dc15877cc772efbb1e9656c12f27f426a
+ms.sourcegitcommit: 295babdcfe86b7a3074fd5b65350c8c11a49f2f1
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/18/2018
-ms.locfileid: "53579812"
+ms.lasthandoff: 12/27/2018
+ms.locfileid: "53788291"
