--- a/articles/azure-signalr/TOC.yml
+++ b/articles/azure-signalr/TOC.yml
@@ -29,16 +29,22 @@ items:
     href: signalr-cli-samples.md
 - name: Begrepp
   items:
+  - name: Azure SignalR Service – internt
+    href: signalr-internals.md
   - name: Skala ASP.NET Core SignalR
     href: signalr-overview-scale-aspnet-core.md
   - name: Skapa realtidsappar med Azure Functions
     href: signalr-overview-azure-functions.md
   - name: Rotering av åtkomstnyckel
     href: signalr-key-rotation.md
+  - name: Meddelanden och anslutningar
+    href: signalr-messages.md
 - name: Resurser
   items:
   - name: Översikt över SignalR
     href: https://github.com/aspnet/Home/wiki/Roadmap
+  - name: Vanliga frågor och svar
+    href: signalr-faq.md
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/signalr-service/
   - name: Videoklipp
@@ -49,9 +55,9 @@ items:
     href: https://forums.asp.net/1254.aspx
   - name: Twitter
     href: https://twitter.com/SignalR
-ms.openlocfilehash: 3ea848614be75a785f03bd81065651f77f02efe8
-ms.sourcegitcommit: c94cf3840db42f099b4dc858cd0c77c4e3e4c436
+ms.openlocfilehash: f4375cae80694d583b7f57cd76e5e17f85aca496
+ms.sourcegitcommit: 9f87a992c77bf8e3927486f8d7d1ca46aa13e849
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/19/2018
-ms.locfileid: "53628467"
+ms.lasthandoff: 12/28/2018
+ms.locfileid: "53807490"
