--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -40,35 +40,33 @@ items:
   items:
   - name: Bygg en app
     items:
-    - name: 1. Fastställ användaravsikter
+    - name: Fastställ användaravsikter
       href: luis-quickstart-intents-only.md
-    - name: 2. Identifiera vanliga avsikter
+    - name: Identifiera vanliga användardata med fördefinierade modeller
       href: luis-tutorial-prebuilt-intents-entities.md
-    - name: 3. Extrahera välutformade data
-      href: luis-quickstart-intents-regex-entity.md
-    - name: 4. Extrahera exakta textmatchningar
-      href: luis-quickstart-intent-and-list-entity.md
-    - name: 5. Extrahera sammanhangsbaserade data
-      href: luis-quickstart-intent-and-hier-entity.md
-    - name: 6. Gruppera och extrahera relaterade data
-      href: luis-tutorial-composite-entity.md
-    - name: 7. Extrahera namn
-      href: luis-quickstart-primary-and-secondary-data.md
-    - name: 8. Extrahera nyckelfraser
-      href: luis-quickstart-intent-and-key-phrase.md
-    - name: 9. Extrahera sentiment
+    - name: Extrahera sentiment från användaryttranden
       href: luis-quickstart-intent-and-sentiment-analysis.md
+    - name: Extrahera välutformade data med reguljära uttryck
+      href: luis-quickstart-intents-regex-entity.md
+    - name: Extrahera exakta textmatchningar med listor
+      href: luis-quickstart-intent-and-list-entity.md
+    - name: Extrahera sammanhangsbaserade data med hierarkiska entiteter
+      href: luis-quickstart-intent-and-hier-entity.md
+    - name: Gruppera och extrahera relaterade data med sammansatta entiteter
+      href: luis-tutorial-composite-entity.md
+    - name: Extrahera namn med enkla entiteter
+      href: luis-quickstart-primary-and-secondary-data.md
   - name: Förbättra appen
     items:
-    - name: 1. Åtgärda osäkra förutsägelser
+    - name: Åtgärda osäkra förutsägelser
       href: luis-tutorial-review-endpoint-utterances.md
-    - name: 2. Datauppsättningar för batch-test
+    - name: Datauppsättningar för batch-test
       href: luis-tutorial-batch-testing.md
-    - name: 3. Lägg till vanliga yttrandeformat
+    - name: Lägg till vanliga yttrandeformat
       href: luis-tutorial-pattern.md
-    - name: 4. Extrahera sammanhangsbaserade mönster
+    - name: Extrahera sammanhangsbaserade mönster
       href: luis-tutorial-pattern-roles.md
-    - name: 5. Extrahera friformsdata
+    - name: Extrahera friformsdata
       href: luis-tutorial-pattern-any.md
   - name: Använda robot
     items:
@@ -401,9 +399,9 @@ items:
     href: https://blog.botframework.com/category/luis/
   - name: Kunskapsbas
     href: https://cognitive.uservoice.com/knowledgebase/topics/127872-luis-language-understanding-intelligent-service
-ms.openlocfilehash: e43547c994be9beac717b2644817d9749b298b03
-ms.sourcegitcommit: 549070d281bb2b5bf282bc7d46f6feab337ef248
+ms.openlocfilehash: eee038c67b910c7bf54e6aa361806c1ef04675ae
+ms.sourcegitcommit: 7862449050a220133e5316f0030a259b1c6e3004
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/21/2018
-ms.locfileid: "53723883"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53753241"
