--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -30,16 +30,8 @@ items:
   items:
   - name: Migrera från v2 till v3
     href: migrate-from-v2-to-v3.md
-  - name: Analysera innehåll
-    href: analyzing-video-audio-files-concept.md
-  - name: Koda innehåll
-    href: encoding-concept.md
-    items:
-    - name: Media Encoder Standard-format
-      href: media-encoder-standard-formats.md
-    - name: Generera anpassningsbar bithastighetsstege automatiskt
-      href: autogen-bitrate-ladder.md
-  - name: Undersöka entiteter
+  - name: Entiteter
+    href: entities-overview.md
     items:
     - name: Konto- och tillgångsfilter
       href: filters-dynamic-manifest-overview.md
@@ -47,6 +39,8 @@ items:
       href: assets-concept.md
     - name: Principer för innehållsnycklar
       href: content-key-policy-concept.md
+    - name: LiveEvents och LiveOutputs
+      href: live-events-outputs-concept.md
     - name: Slutpunkter för direktuppspelning
       href: streaming-endpoint-concept.md
     - name: Positionerare för direktuppspelning
@@ -55,8 +49,13 @@ items:
       href: streaming-policy-concept.md
     - name: Transformeringar och jobb
       href: transforms-jobs-concept.md
-  - name: Undersöka lagringskonton
-    href: storage-account-concept.md
+  - name: Koda innehåll
+    href: encoding-concept.md
+    items:
+    - name: Media Encoder Standard-format
+      href: media-encoder-standard-formats.md
+    - name: Generera anpassningsbar bithastighetsstege automatiskt
+      href: autogen-bitrate-ladder.md
   - name: Hantera Event Grid-händelser
     href: reacting-to-media-services-events.md
   - name: Skydda innehåll
@@ -65,6 +64,8 @@ items:
       href: content-protection-overview.md
     - name: Multi-DRM-system med åtkomstkontroll
       href: design-multi-drm-system-with-access-control.md
+  - name: Analysera innehåll
+    href: analyzing-video-audio-files-concept.md
   - name: Direktuppspelning av händelser
     href: live-streaming-overview.md
     items:
@@ -78,6 +79,8 @@ items:
       href: live-event-states-billing.md
     - name: Svarstid
       href: live-event-latency.md
+  - name: Lagringskonton
+    href: storage-account-concept.md
 - name: Instruktionsguider
   items:
   - name: Skapa ett konto – CLI
@@ -182,9 +185,9 @@ items:
     href: limits-quotas-constraints.md
   - name: VANLIGA FRÅGOR OCH SVAR
     href: frequently-asked-questions.md
-ms.openlocfilehash: aafc49b10a012bab6c3dc3d455480deca44fde32
-ms.sourcegitcommit: c94cf3840db42f099b4dc858cd0c77c4e3e4c436
+ms.openlocfilehash: 660052b4e82f6e005c096b5ac1edd7a80c2d5339
+ms.sourcegitcommit: 21466e845ceab74aff3ebfd541e020e0313e43d9
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/19/2018
-ms.locfileid: "53631999"
+ms.lasthandoff: 12/21/2018
+ms.locfileid: "53744980"
