--- a/articles/azure-netapp-files/TOC.yml
+++ b/articles/azure-netapp-files/TOC.yml
@@ -21,6 +21,10 @@ items:
     href: azure-netapp-files-create-volumes.md
   - name: Konfigurera exportprincipen för en volym (valfritt)
     href: azure-netapp-files-configure-export-policy.md
+- name: Begrepp
+  items:
+  - name: Resursbegränsningar för Azure NetApp Files
+    href: azure-netapp-files-resource-limits.md
 - name: Instruktionsguider
   items:
   - name: Hantera volymer
@@ -31,9 +35,13 @@ items:
     href: azure-netapp-files-manage-snapshots.md
   - name: Ändra storlek på en kapacitetspool eller en volym
     href: azure-netapp-files-resize-capacity-pools-or-volumes.md
-ms.openlocfilehash: 9e500904c2249fe1f419e4e8e3657bb083f0143b
-ms.sourcegitcommit: b254db346732b64678419db428fd9eb200f3c3c5
+- name: Referens
+  items:
+  - name: REST
+    href: https://docs.microsoft.com/rest/api/netapp/
+ms.openlocfilehash: 7bb3326cd266c3db37f3e89700e45c9db199454d
+ms.sourcegitcommit: d61faf71620a6a55dda014a665155f2a5dcd3fa2
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/14/2018
-ms.locfileid: "53414226"
+ms.lasthandoff: 01/04/2019
+ms.locfileid: "54052453"
