commit translated contents

--- a/articles/ansible/index.yml
+++ b/articles/ansible/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 5e2b31671a8f08bae1cba66e05d6ae72f960cf9e
-ms.sourcegitcommit: d61faf71620a6a55dda014a665155f2a5dcd3fa2
+ms.openlocfilehash: f7225fece81672e539858567039e1ff086d97c2c
+ms.sourcegitcommit: d4f728095cf52b109b3117be9059809c12b69e32
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/04/2019
-ms.locfileid: "54050939"
+ms.lasthandoff: 01/10/2019
+ms.locfileid: "54197733"
 documentType: LandingData
 title: Dokumentation om Ansible på Azure
 metadata:
@@ -53,6 +53,9 @@ sections:
     - html: <a href="./ansible-deploy-app-vmss">Distribuera program till skalningsuppsättningar för virtuella datorer i Azure.</a>
     - html: <a href="./ansible-create-configure-aks">Skapa och hantera Azure Kubernetes Service-kluster.</a>
     - html: <a href="./ansible-create-configure-application-gateway">Hantera webbtrafik med en Azure Application Gateway.</a>
+    - html: <a href="./ansible-auto-scale-vmss">Skala en VM-skalningsuppsättning automatiskt i Azure med Ansible.</a>
+    - html: <a href="./ansible-scale-azure-web-apps">Skala Azure App Service-webbappar med Ansible.</a>
+    - html: <a href="./ansible-create-configure-route-table">Skapa, ändra eller ta bort en Azure-routningstabell med Ansible.</a>
 - title: Referens
   items:
   - type: list
