--- a/articles/app-service/containers/index.yml
+++ b/articles/app-service/containers/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f6face1b6bd8893f1391f32ea5ac1a52e0289e99
-ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
+ms.openlocfilehash: 8b10892a087572f2e66a73539827601410e9aca2
+ms.sourcegitcommit: 33091f0ecf6d79d434fa90e76d11af48fd7ed16d
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/17/2018
-ms.locfileid: "53542432"
+ms.lasthandoff: 01/09/2019
+ms.locfileid: "54155056"
 documentType: LandingData
 title: Dokumentation om App Service på Linux
 metadata:
@@ -98,7 +98,7 @@ sections:
   - type: list
     style: ordered
     items:
-    - html: Skapa ett program med <a href="/azure/app-service/containers/tutorial-dotnetcore-sqldb-app">.NET Core med Azure SQL DB</a>, <a href="/azure/app-service/containers/tutorial-java-enterprise-postgresql-app">Java Enterpise med PostgreSQL</a> eller <a href="/azure/app-service/containers/tutorial-nodejs-mongodb-app">Node.js med MongoDB</a>
+    - html: Skapa ett program med <a href="/azure/app-service/containers/tutorial-dotnetcore-sqldb-app">.NET Core med Azure SQL DB</a>, <a href="/azure/app-service/containers/tutorial-java-enterprise-postgresql-app">Java Enterprise med PostgreSQL</a> eller <a href="/azure/app-service/containers/tutorial-nodejs-mongodb-app">Node.js med MongoDB</a>
     - html: <a href="/azure/app-service/app-service-web-tutorial-custom-domain">Mappa en befintlig anpassad domän till ditt program</a>
     - html: <a href="/azure/app-service/app-service-web-tutorial-custom-SSL">Bind ett befintligt SSL-certifikat till ditt program</a>
     - html: <a href="/azure/cdn/cdn-add-to-web-app">Lägga till ett CDN till ditt program</a>
