--- a/articles/databox/index.yml
+++ b/articles/databox/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 7056f5478838eec1cccf6329e172d86ea90d4dd8
-ms.sourcegitcommit: 3a02e0e8759ab3835d7c58479a05d7907a719d9c
+ms.openlocfilehash: 5191d259c24a30b6e435fdb2adb93a4345f6ae77
+ms.sourcegitcommit: 33091f0ecf6d79d434fa90e76d11af48fd7ed16d
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/13/2018
-ms.locfileid: "49311056"
+ms.lasthandoff: 01/09/2019
+ms.locfileid: "54159102"
 documentType: LandingData
 title: Azure Data Box-dokumentation – överföring offline
 metadata:
@@ -16,10 +16,10 @@ metadata:
   ms.service: databox
   ms.subservice: pod
   ms.topic: landing-page
-  ms.date: 10/12/2018
+  ms.date: 01/09/2019
   ms.author: alkohli
 abstract:
-  description: Med Azure Data Box kan du överföra hundratals terabyte data till Azure på ett snabbt, prisvärt och tillförlitligt sätt. Använd Data Box-enheter för överföring av data offline när du har begränsad tid, nätverksresurser eller budget.<p>Beroende på datastorleken kan du välja mellan Data Box-Disk, Data Box<SUP>förhandsversion</SUP> eller Data Box – tung<SUP>förhandsversion</SUP>. För varje enhet sker överföringen till Azure i 4 enkla steg – beställa, ta emot, kopiera data till enhet och returnera enheten till Azure. I Azure-datacentret överförs och raderas data.</p><p>Lär dig hur du kan använda Data Box för att överföra dina offlinedata med våra snabbstarter och självstudier.</p>
+  description: Med Azure Data Box kan du överföra hundratals terabyte data till Azure på ett snabbt, prisvärt och tillförlitligt sätt. Använd Data Box-enheter för överföring av data offline när du har begränsad tid, nätverksresurser eller budget.<p>Beroende på datastorleken kan du välja mellan Data Box Disk, Data Box eller Data Box Heavy<SUP>förhandsversion</SUP>. För varje enhet sker överföringen till Azure i 4 enkla steg – beställa, ta emot, kopiera data till enhet och returnera enheten till Azure. I Azure-datacentret överförs och raderas data.</p><p>Lär dig hur du kan använda Data Box för att överföra dina offlinedata med våra snabbstarter och självstudier.</p>
 sections:
 - title: Snabbstart
   items:
@@ -32,7 +32,7 @@ sections:
       href: /azure/databox/data-box-quickstart-portal
     - image:
         src: https://docs.microsoft.com/media/common/i_quick-start.svg
-      text: Konfigurera Data Box Disk<SUP>Förhandsversion</SUP> i Azure-portalen
+      text: Konfigurera Data Box Disk i Azure-portalen
       href: /azure/databox/data-box-disk-quickstart-portal
     - image:
         src: https://docs.microsoft.com/media/common/i_quick-start.svg
@@ -46,5 +46,5 @@ sections:
     items:
     - title: För Data Box
       html: <p><a href="/azure/databox/data-box-deploy-ordered">Beställ Azure Data Box</a></p><p><a href="/azure/databox/data-box-deploy-set-up">Kabelanslut och anslut Azure Data Box</a></p><p><a href="/azure/databox/data-box-deploy-copy-data">Kopiera data till Azure Data Box</a></p><p><a href="/azure/databox/data-box-deploy-picked-up">Returnera Azure Data Box och verifiera uppladdning</a></p>
-    - title: För Data Box Disk<SUP>Förhandsversion</SUP>
+    - title: För Data Box Disk
       html: <p><a href="/azure/databox/data-box-disk-deploy-ordered">Beställ Azure Data Box Disk</a></p><p><a href="/azure/databox/data-box-disk-deploy-set-up">Packa upp, ansluta och låsa upp en Azure Data Box-disk</a></p><p><a href="/azure/databox/data-box-disk-deploy-copy-data">Kopiera data till Azure Data Box Disk</a></p><p><a href="/azure/databox/data-box-disk-deploy-picked-up">Returnera Azure Data Box Disk och verifiera uppladdning</a></p>
