--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -30,16 +30,16 @@ items:
     href: tutorial-create-vmss.md
   - name: 7 – Belastningsutjämna virtuella datorer
     href: tutorial-load-balancer.md
-  - name: 8 – Nätverk för virtuella datorer
+  - name: 8 – Hantera nätverk
     href: tutorial-virtual-network.md
   - name: 9 – Säkerhetskopiera virtuella datorer
     href: tutorial-backup-vms.md
-  - name: 10 – Hantera virtuella datorer
+  - name: 10 – Styra virtuella datorer
     displayName: scope policy RBAC lock tag
     href: tutorial-govern-resources.md
   - name: 11 – Övervaka och uppdatera virtuella datorer
     href: tutorial-monitoring.md
-  - name: 12 – Security Center för virtuella datorer
+  - name: 12 – Hantera VM-säkerhet
     href: tutorial-azure-security.md
   - name: 13 – Installera en SQL\IIS\.NET-stack
     href: tutorial-iis-sql.md
@@ -244,6 +244,8 @@ items:
       items:
       - name: Översikt
         href: shared-image-galleries.md
+      - name: Skapa delade avbildningar med PowerShell
+        href: shared-images.md
       - name: Skapa delade bilder med hjälp av CLI
         href: ../linux/shared-images.md
       - name: Felsöka delade bilder
@@ -409,6 +411,8 @@ items:
         href: migration-classic-resource-manager-community-tools.md
       - name: VANLIGA FRÅGOR OCH SVAR
         href: migration-classic-resource-manager-faq.md
+- name: Felsöka
+  href: ../troubleshooting/index.md
 - name: Referens
   items:
   - name: Azure CLI
@@ -447,11 +451,9 @@ items:
     href: https://azure.microsoft.com/documentation/videos/index/?services=virtual-machines
   - name: VANLIGA FRÅGOR OCH SVAR
     href: faq.md
-- name: Felsöka
-  href: ../troubleshooting/index.md
-ms.openlocfilehash: bb8bf3fdd1b49987013fbb6b2f508019cedc811e
-ms.sourcegitcommit: 5d837a7557363424e0183d5f04dcb23a8ff966bb
+ms.openlocfilehash: ca927f422da31c1ab34523aad61f8008d12ddd83
+ms.sourcegitcommit: 63b996e9dc7cade181e83e13046a5006b275638d
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/06/2018
-ms.locfileid: "52958260"
+ms.lasthandoff: 01/10/2019
+ms.locfileid: "54189249"
