commit translated contents

--- a/articles/azure-resource-manager/index.yml
+++ b/articles/azure-resource-manager/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: de92f8d8be6744f7004da4cc662b31a387e8920a
-ms.sourcegitcommit: 85d94b423518ee7ec7f071f4f256f84c64039a9d
+ms.openlocfilehash: 9ead8d485a12a6c21b653bc6e1f8536781f762d1
+ms.sourcegitcommit: ba9f95cf821c5af8e24425fd8ce6985b998c2982
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/14/2018
-ms.locfileid: "53385592"
+ms.lasthandoff: 01/17/2019
+ms.locfileid: "54380970"
 documentType: LandingData
 title: Dokumentation om Resource Manager på Azure
 metadata:
@@ -49,6 +49,7 @@ sections:
     items:
     - html: <a href="https://docs.microsoft.com/azure/azure-resource-manager/resource-manager-tutorial-create-encrypted-storage-accounts">Använda Resource Manager-mallreferensen</a>.
     - html: <a href="https://docs.microsoft.com/azure/azure-resource-manager/resource-manager-tutorial-create-multiple-instances">Skapa flera instanser av en Azure-resurs</a>.
+    - html: <a href="https://docs.microsoft.com/azure/azure-resource-manager/resource-manager-tutorial-move-resources">Flytta resurser</a>.
     - html: <a href="https://docs.microsoft.com/azure/azure-resource-manager/resource-manager-tutorial-create-templates-with-dependent-resources">Ange resursdistributionsordning</a>.
     - html: <a href="https://docs.microsoft.com/azure/azure-resource-manager/resource-manager-tutorial-use-conditions">Använda villkor</a>.
     - html: <a href="https://docs.microsoft.com/azure/azure-resource-manager/resource-manager-tutorial-use-key-vault">Integrera Azure Key Vault</a>.
@@ -57,6 +58,7 @@ sections:
     - html: <a href="https://docs.microsoft.com/azure/azure-resource-manager/resource-manager-tutorial-deploy-sql-extensions-bacpac">Distribuera SQL-tillägg</a>.
     - html: <a href="https://docs.microsoft.com/azure/azure-resource-manager/resource-manager-tutorial-secure-artifacts">Skydda mallartefakter</a>.
     - html: <a href="https://docs.microsoft.com/azure/azure-resource-manager/deployment-manager-tutorial">Använda säkra distributionsmetoder</a>.
+    - html: <a href="https://docs.microsoft.com/azure/azure-resource-manager/resource-manager-tutorial-troubleshoot">Felsöka malldistributioner</a>.
 - title: Exempel
   items:
   - type: paragraph
