--- a/articles/ansible/toc.yml
+++ b/articles/ansible/toc.yml
@@ -16,33 +16,45 @@ items:
   - name: Hantera en virtuell Linux-dator
     href: /azure/virtual-machines/linux/ansible-manage-linux-vm
     maintainContext: true
+  - name: Kör en spelbok i Cloud Shell
+    href: ./ansible-run-playbook-in-cloudshell.md
   expanded: true
 - name: Självstudier
   items:
-  - name: Kör en spelbok i Cloud Shell
-    href: ./ansible-run-playbook-in-cloudshell.md
-    maintainContext: true
-  - name: Hantera dynamiska lager
-    href: ./ansible-manage-azure-dynamic-inventories.md
-    maintainContext: true
-  - name: Skapa och konfigurera VMSS
-    href: ./ansible-create-configure-vmss.md
-  - name: Distribuera app till VMSS
-    href: ./ansible-deploy-app-vmss.md
-  - name: Skala VMSS automatiskt
-    href: ./ansible-auto-scale-vmss.md
-  - name: Skapa och konfigurera AKS-kluster
-    href: ./ansible-create-configure-aks.md
-  - name: Skapa och konfigurera Azure Application Gateway
-    href: ./ansible-create-configure-application-gateway.md
-  - name: Skapa och konfigurera Azure DB för MySQL
-    href: ./ansible-create-configure-mysql.md
-  - name: Skapa och konfigurera Azure Web Apps
-    href: ./ansible-create-configure-azure-web-apps.md
-  - name: Skala Azure Web Apps
-    href: ./ansible-scale-azure-web-apps.md
-  - name: Skapa och konfigurera routningstabeller
-    href: ./ansible-create-configure-route-table.md
+  - name: AKS
+    items:
+    - name: Skapa och konfigurera AKS-kluster
+      href: ./ansible-create-configure-aks.md
+  - name: App Service
+    items:
+    - name: Skapa och konfigurera Azure Web Apps
+      href: ./ansible-create-configure-azure-web-apps.md
+    - name: Skala Azure Web Apps
+      href: ./ansible-scale-azure-web-apps.md
+  - name: Application Gateway
+    items:
+    - name: Skapa och konfigurera Azure Application Gateway
+      href: ./ansible-create-configure-application-gateway.md
+  - name: Databaser
+    items:
+    - name: Skapa och konfigurera Azure DB för MySQL
+      href: ./ansible-create-configure-mysql.md
+  - name: Dynamiskt lager
+    items:
+    - name: Hantera dynamiska lager
+      href: ./ansible-manage-azure-dynamic-inventories.md
+  - name: Virtuellt nätverk
+    items:
+    - name: Skapa och konfigurera routningstabeller
+      href: ./ansible-create-configure-route-table.md
+  - name: VMSS
+    items:
+    - name: Skapa och konfigurera VMSS
+      href: ./ansible-create-configure-vmss.md
+    - name: Distribuera app till VMSS
+      href: ./ansible-deploy-app-vmss.md
+    - name: Skala VMSS automatiskt
+      href: ./ansible-auto-scale-vmss.md
 - name: Referens
   items:
   - name: Spelboksroller
@@ -67,9 +79,9 @@ items:
   items:
   - name: Visual Studio Code-tillägg för Ansible
     href: https://marketplace.visualstudio.com/items?itemName=vscoss.vscode-ansible
-ms.openlocfilehash: a54936953aa812cbe943394b9d083d8957f770ae
-ms.sourcegitcommit: 295babdcfe86b7a3074fd5b65350c8c11a49f2f1
+ms.openlocfilehash: 914987ee58a2ba09295d425c2107ba7eb192c131
+ms.sourcegitcommit: a408b0e5551893e485fa78cd7aa91956197b5018
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/27/2018
-ms.locfileid: "53789848"
+ms.lasthandoff: 01/17/2019
+ms.locfileid: "54359246"
