--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -249,7 +249,7 @@ items:
       href: cognitive-search-skill-language-detection.md
     - name: Igenkänning av namngiven enhet
       href: cognitive-search-skill-named-entity-recognition.md
-    - name: Entitetsigenkänning
+    - name: Igenkänning av enhet
       href: cognitive-search-skill-entity-recognition.md
     - name: Textsammanslagning
       href: cognitive-search-skill-textmerger.md
@@ -289,9 +289,9 @@ items:
     href: https://azure.microsoft.com/pricing/details/search/
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=search
-ms.openlocfilehash: cc618fc015cc3b6596d9e5fca84fe943ebae45ae
-ms.sourcegitcommit: d4f728095cf52b109b3117be9059809c12b69e32
+ms.openlocfilehash: 04dddfa9cdf5688ca3b821cbfd8350fcb496933b
+ms.sourcegitcommit: 9f07ad84b0ff397746c63a085b757394928f6fc0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/10/2019
-ms.locfileid: "54199110"
+ms.lasthandoff: 01/17/2019
+ms.locfileid: "54390636"
