--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -160,6 +160,8 @@ items:
       items:
       - name: Uppdatera mobilitetstjänsten för virtuella Azure-datorer
         href: azure-to-azure-autoupdate.md
+      - name: Uppdateringar i Azure Site Recovery
+        href: service updates-how-to.md
   - name: Haveriberedskap för VMware till Azure
     items:
     - name: Konfigurera nätverk
@@ -234,6 +236,8 @@ items:
         href: vmware-azure-manage-process-server.md
       - name: Hantera vCenter-servrar
         href: vmware-azure-manage-vcenter.md
+      - name: Uppdateringar i Azure Site Recovery
+        href: service updates-how-to.md
       - name: Ta bort servrar och inaktivera skydd
         href: site-recovery-manage-registration-and-protection.md
       - name: Ta bort ett valv
@@ -274,6 +278,8 @@ items:
         href: vmware-azure-manage-process-server.md
       - name: Ta bort servrar och inaktivera skydd
         href: site-recovery-manage-registration-and-protection.md
+      - name: Uppdateringar i Azure Site Recovery
+        href: service updates-how-to.md
       - name: Ta bort ett valv
         href: delete-vault.md
   - name: Haveriberedskap för virtuell Azure Stack-dator
@@ -320,8 +326,12 @@ items:
         href: hyper-v-azure-failback.md
     - name: Hantera
       items:
+      - name: Uppgradera Windows-servrar som konfigurerats med Site Recovery
+        href: upgrade-2012R2-to-2016.md
       - name: Ta bort servrar och inaktivera skydd
         href: site-recovery-manage-registration-and-protection.md
+      - name: Uppdateringar i Azure Site Recovery
+        href: service updates-how-to.md
       - name: Ta bort ett valv
         href: delete-vault.md
       - name: Uppgradera Windows-servrar som konfigurerats med Site Recovery
@@ -442,9 +452,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=site-recovery
-ms.openlocfilehash: 1029557aed09aba06f7fce63bc4681969a6b3733
-ms.sourcegitcommit: 30d23a9d270e10bb87b6bfc13e789b9de300dc6b
+ms.openlocfilehash: c81028216a6af1fac6b6da261395d4fded3d8500
+ms.sourcegitcommit: ba9f95cf821c5af8e24425fd8ce6985b998c2982
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/08/2019
-ms.locfileid: "54103515"
+ms.lasthandoff: 01/17/2019
+ms.locfileid: "54382492"
