--- a/articles/machine-learning/studio/toc.yml
+++ b/articles/machine-learning/studio/toc.yml
@@ -57,34 +57,13 @@ items:
     href: r-quickstart.md
 - name: Exempel
   items:
+  - name: Exempelexperiment
+    displayName: gallery
+    href: sample-experiments.md
   - name: Exempeldatauppsättningar
     href: use-sample-datasets.md
-  - name: Kundomsättningsexempel
-    href: azure-ml-customer-churn-scenario.md
   - name: Azure AI-galleriet
-    items:
-    - name: Översikt
-      href: gallery-how-to-use-contribute-publish.md
-    - name: Exempelexperiment
-      href: sample-experiments.md
-    - name: Branscher
-      href: gallery-industries.md
-    - name: Lösningar
-      href: gallery-solutions.md
-    - name: Experiment
-      href: gallery-experiments.md
-    - name: Jupyter Notebook
-      href: gallery-jupyter-notebooks.md
-    - name: Tävlingar
-      href: gallery-competitions.md
-    - name: Tävlingar, vanliga frågor och svar
-      href: competition-faq.md
-    - name: Självstudier
-      href: gallery-tutorials.md
-    - name: Samlingar
-      href: gallery-collections.md
-    - name: Anpassade moduler
-      href: gallery-custom-modules.md
+    href: gallery-how-to-use-contribute-publish.md
 - name: Begrepp
   items:
   - name: Modellhantering
@@ -102,9 +81,6 @@ items:
       href: troubleshooting-creating-ml-workspace.md
     - name: Distribuera med ARM
       href: deploy-with-resource-manager-template.md
-    - name: Visa och ta bort Studio-kontodata
-      displayName: export
-      href: export-delete-personal-data-dsr.md
   - name: Importera utbildningsdata
     items:
     - name: Översikt
@@ -128,15 +104,9 @@ items:
       displayName: endpoint, endpoints
       href: create-models-and-endpoints-with-powershell.md
     - name: Välja algoritmer
-      items:
-      - name: Välja algoritmer
-        href: algorithm-choice.md
-      - name: Algoritmfacit
-        href: algorithm-cheat-sheet.md
-      - name: Använda linjär regression
-        href: linear-regression-in-azure.md
-      - name: Använda textanalys
-        href: text-analytics-module-tutorial.md
+      href: algorithm-choice.md
+    - name: Algoritmfacit
+      href: algorithm-cheat-sheet.md
     - name: Utvärdera och tolka resultaten
       items:
       - name: Utvärdera prestanda
@@ -212,7 +182,19 @@ items:
       href: consume-web-service-with-web-app-template.md
     - name: Använda Batch-pool
       href: dedicated-capacity-for-bes-jobs.md
-  - name: Visa och ta bort kontodata
+  - name: Exempel
+    items:
+    - name: Konsumentförlust
+      href: azure-ml-customer-churn-scenario.md
+    - name: Sentimentanalys
+      href: text-analytics-module-tutorial.md
+    - name: Migrera analys från Excel till Studio
+      href: linear-regression-in-azure.md
+  - name: Visa och ta bort Studio-data
+    displayName: export
+    href: export-delete-personal-data-dsr.md
+  - name: Visa och ta bort galleridata
+    displayName: export
     href: ai-gallery-control-personal-data-dsr.md
 - name: Referens
   items:
@@ -244,9 +226,9 @@ items:
     href: azure-ml-netsharp-reference-guide.md
   - name: Jämför våra ML-produkter
     href: ../service/overview-more-machine-learning.md
-ms.openlocfilehash: 821a6ffb787aef0d75dbc0f9e1ab331ad35dafa0
-ms.sourcegitcommit: 9f07ad84b0ff397746c63a085b757394928f6fc0
+ms.openlocfilehash: a79ff2e7b2fba67e5c341468b462eacd07e2693c
+ms.sourcegitcommit: c31a2dd686ea1b0824e7e695157adbc219d9074f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/17/2019
-ms.locfileid: "54389924"
+ms.lasthandoff: 01/18/2019
+ms.locfileid: "54401953"
