--- a/articles/search/index.yml
+++ b/articles/search/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: b995f5f29c1377105e174faed43fb8ba82d90383
-ms.sourcegitcommit: eb9dd01614b8e95ebc06139c72fa563b25dc6d13
+ms.openlocfilehash: 88a657e30d3b30825a3fea21aa6e1162e8bc09b4
+ms.sourcegitcommit: 82cdc26615829df3c57ee230d99eecfa1c4ba459
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/12/2018
-ms.locfileid: "53313249"
+ms.lasthandoff: 01/19/2019
+ms.locfileid: "54411160"
 documentType: LandingData
 title: Dokumentation om Azure Search
 metadata:
@@ -17,10 +17,10 @@ metadata:
   ms.service: search
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 05/01/2018
+  ms.date: 01/18/2019
   ms.author: heidist
 abstract:
-  description: Lär dig hur du skapar en söklösning för företag med privat, heterogent innehåll med hjälp av Azure Search. Självstudier, API-referenser och andra dokument visar dig hur du konsoliderar sökbart innehåll till ett enda snabbt frågningsbart index med hjälp av enkel-till-avancerad syntax för en mängd olika scenarier. <p/><b>Ny kognitiv förhandsversion för sökning.</b> Använd en förhandsversion av REST API för att binda AI-drivna algoritmer för indexering av pipeline. Extrahera data och anropa bearbetning av naturligt språk och bilder för att omvandla ostrukturerat innehåll i råformat till sökbart innehåll i ett Azure Search-index. <p/>Utforska kognitiv sökning med <a href="/azure/search/cognitive-search-quickstart-blob">resurser och exempeldata</a> eller läs mer i <a href="/azure/search/cognitive-search-concept-intro">Koncept</a>.
+  description: Lär dig hur du skapar en söklösning för företag med privat, heterogent innehåll med hjälp av Azure Search. Självstudier, API-referenser och andra dokument visar dig hur du konsoliderar sökbart innehåll till ett enda snabbt frågningsbart index med hjälp av enkel-till-avancerad syntax för en mängd olika scenarier. <p/><a href="/azure/search/cognitive-search-concept-intro"><b>Ny kognitiv förhandsversion för sökning.</b></a> Använd en förhandsversion av REST API för att binda AI-drivna algoritmer för indexering av pipeline. Extrahera data och anropa bearbetning av naturligt språk och bilder för att omvandla ostrukturerat innehåll i råformat till sökbart innehåll i ett Azure Search-index. <p/>Utforska kognitiv sökning med <a href="/azure/search/cognitive-search-quickstart-blob">resurser och exempeldata</a> eller läs mer i <a href="/azure/search/cognitive-search-concept-intro">Koncept</a>.
   aside:
     image:
       alt: 
