--- a/articles/azure-monitor/index.yml
+++ b/articles/azure-monitor/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 579410d04c7f3fc5548e0014a4f6a028c3db74f1
-ms.sourcegitcommit: e68df5b9c04b11c8f24d616f4e687fe4e773253c
+ms.openlocfilehash: 5b8d5e639711b91d380b5f14de48be6a80fb0263
+ms.sourcegitcommit: 98645e63f657ffa2cc42f52fea911b1cdcd56453
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/20/2018
-ms.locfileid: "53651545"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54820775"
 documentType: LandingData
 title: Dokumentation om Azure Monitor
 metadata:
@@ -16,11 +16,21 @@ metadata:
   ms.service: azure-monitor
   ms.tgt_pltfrm: na
   ms.topic: landing-page
-  ms.date: 09/04/2018
+  ms.date: 01/22/2019
   ms.author: bwren
 abstract:
   description: Azure Monitor, vilket nu innefattar Log Analytics och Application Insights, innehåller avancerade verktyg för att samla in och analysera telemetri som gör det möjligt att maximera prestanda och tillgänglighet för dina molnresurser och lokala resurser och program. Det hjälper dig att förstå hur dina program fungerar och identifierar proaktivt problem som påverkar dem och de resurser som de förlitar sig på.
 sections:
+- title: Föreslaget innehåll
+  items:
+  - type: paragraph
+    text: Med följande länkar får du en lista med förslag över innehåll för Log Analytics och Application Insights.
+  - type: list
+    style: unordered
+    className: spaced noBullet
+    items:
+    - html: <a href="/azure/azure-monitor/azure-monitor-log-hub">Log Analytics</a>
+    - html: <a href="/azure/azure-monitor/azure-monitor-app-hub">Application Insights</a>
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
