--- a/articles/machine-learning/studio/index.yml
+++ b/articles/machine-learning/studio/index.yml
@@ -1,15 +1,15 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 542bd4f23c32d4d59b11875ef96f8e1f261605ba
-ms.sourcegitcommit: 70471c4febc7835e643207420e515b6436235d29
+ms.openlocfilehash: a4ceaec8c71d4c13a18c8e28cc057b4b6d5337d5
+ms.sourcegitcommit: 98645e63f657ffa2cc42f52fea911b1cdcd56453
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/15/2019
-ms.locfileid: "54302281"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54812513"
 documentType: LandingData
-title: Dokumentation om Azure Machine Learning Studio
+title: Dokumentation om Machine Learning Studio
 metadata:
-  title: Dokumentation – Självstudier och referenser för Azure Machine Learning Studio | Microsoft Docs
-  description: Azure Machine Learning Studio är ett dra-och-släpp-verktyg där flera användare kan samarbeta för att bygga, testa och distribuera prediktiva analyslösningar utifrån dina data. Självstudier, videor och exempelmodeller visar hur du använder Studio för att skapa och distribuera Machine Learning-modeller.
+  title: Dokumentation om Azure Machine Learning Studio – självstudier, referens | Microsoft Docs
+  description: Machine Learning Studio är ett dra-och-släpp-verktyg där flera användare kan samarbeta för att bygga, testa och distribuera prediktiva analyslösningar utifrån dina data. Självstudier, videor och exempelmodeller visar hur du använder Studio för att skapa och distribuera Machine Learning-modeller.
   services: machine-learning
   ms.service: machine-learning
   ms.component: studio
@@ -18,20 +18,10 @@ metadata:
   ms.author: jmartens
   ms.tgt_pltfrm: na
   ms.devlang: na
-  ms.date: 09/24/2018
+  ms.date: 01/24/2019
 abstract:
   description: Azure Machine Learning Studio är ett dra-och-släpp-verktyg där flera användare kan samarbeta för att bygga, testa och distribuera prediktiva analyslösningar utifrån dina data. Självstudier, videor och exempelmodeller visar hur du använder Studio för att skapa och distribuera Machine Learning-modeller.
 sections:
-- items:
-  - type: list
-    style: cards
-    className: cardsFTitle
-    items:
-    - title: Börja läsa om Azure Machine Learning Studio
-      href: create-experiment
-      image:
-        src: /azure/machine-learning/media/index/machine-learning-studio.svg
-        href: create-experiment
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
@@ -39,19 +29,31 @@ sections:
   - type: list
     style: unordered
     items:
-    - html: <a href="create-experiment">Skapa ditt första experiment</a>
+    - html: <a href="create-experiment">Skapa ditt första Studio-experiment</a>
     - html: <a href="algorithm-choice">Välja den bästa algoritmen</a>
-    - html: <a href="deploy-consume-web-service-guide">Operationalisera modellen</a>
-    - html: <a href="data-science-for-beginners-the-5-questions-data-science-answers">Information om datavetenskap</a>
+    - html: <a href="deploy-consume-web-service-guide">Distribuera modeller av webbtjänster</a>
+    - html: <a href="data-science-for-beginners-the-5-questions-data-science-answers">Läs om Datavetenskap för nybörjare</a>
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
     text: 'Ta del av utökade självstudier som hjälper dig att skapa och distribuera modeller:'
   - type: list
-    style: ordered
+    style: unordered
     items:
     - html: <a href="walkthrough-develop-predictive-solution">Skapa och distribuera en förutsägelselösning</a>
     - html: <a href="azure-ml-customer-churn-scenario">Kundomsättningsexempel</a>
+- title: Referens
+  items:
+  - type: list
+    style: cards
+    className: cardsD
+    items:
+    - title: Kommandorad
+      html: <p><a href="powershell-module">PowerShell-moduler</a></p>
+    - title: Moduler
+      html: <p><a href="https://msdn.microsoft.com/library/azure/dn905974.aspx">Algoritm- och modulreferens</a></p>
+    - title: REST
+      html: <p><a href="https://docs.microsoft.com/rest/api/machinelearning/">Hantering av REST API:er</a></p><p><a href="web-service-error-codes">Felkoder för webbtjänst</a></p>
 - title: Fler Azure Machine Learning-tekniker
   items:
   - type: paragraph
@@ -70,15 +72,3 @@ sections:
       image:
         src: media/index/virtual-machines.svg
         href: /azure/machine-learning/data-science-virtual-machine/
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Kommandorad
-      html: <p><a href="https://docs.microsoft.com/powershell/module/azurerm.machinelearning">PowerShell-modul (ny)</a></p><p><a href="powershell-module">PowerShell-modul (klassisk)</a></p>
-    - title: Moduler
-      html: <p><a href="https://msdn.microsoft.com/library/azure/dn905974.aspx">Algoritm- och modulreferens</a></p>
-    - title: REST
-      html: <p><a href="https://docs.microsoft.com/rest/api/machinelearning/">Hantering av REST API:er</a></p><p><a href="web-service-error-codes">Felkoder för webbtjänst</a></p>
